# fastspend

./: README.md
fastspend-api/: Cargo.toml  wrangler.toml
fastspend-api/src/: config.rs  handler.rs  lib.rs  utils.rs
fastspend-api/src/config/: account.rs  config.example.json  from_file.rs  keyword.rs  mod.rs
fastspend-api/src/parser/: mod.rs  spending.pest
fastspend-api/src/sinks/: mod.rs
fastspend-api/src/sinks/ynab/: mod.rs
fastspend-pwa/: index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
fastspend-pwa/src/: App.svelte  app.css  main.ts
